schema/testdata/validation_operations_unique_globally/schema.keel
model Profile {
  fields {
    username Text
  }

  operations {
    create createProfile(username) {
        @set(profile.identity = ctx.identity)
    }

    create createProfile(username) {
        @set(profile.identity = ctx.identity)
    } 
  }
}
